--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@
     position: absolute;
     top: 0;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.3;
     pointer-events: none;
     z-index: 0;
 }
 .logo img{
-    height: 70px;
+    height: 90px;
     /* z-index: 2; */
     
 }
@@ -40,7 +40,7 @@
     align-items: center;
     position: sticky;
     inset: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .Products{
@@ -49,7 +49,8 @@
 .nav-link{
     display: flex;
     gap: 50px;
-    margin: 15px;
+    margin: 8px;
+    padding: 4px;
     display: flex;
     align-items: center;
 }
@@ -60,8 +61,9 @@
 .main_links a{
     text-decoration: none;
     color: rgb(255, 255, 255);
-    font-size: medium;
+    font-size: large;
     font-weight: 400;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .Products a{
     text-decoration: none;
@@ -70,19 +72,20 @@
 .dropdown{
     list-style: none;
     opacity: 0;
-    position: absolute;
+    position:absolute;
     border-radius: 10px;
     background-color: white;
     list-style: none;
-    top: 25px;
+    top: 20px;
   padding: 5px;
   min-width: 180px;
+  pointer-events: none;
   /* border-radius: 10px; */
   box-shadow: 0 4px 8px rgba(0,0,0,0.7);
   transform: translateY(20px);
   transition: all 0.3s ease;
-  /* pointer-events: none; */
-  opacity: 0;
+  
+  /* opacity: 0; */
   color: black;
 }
 .dropdown li a{
@@ -105,20 +108,44 @@ padding: 10px;
 }
 .Products:hover .dropdown{
     opacity: 1;
+    pointer-events: auto;
+}
+.Products:hover{
+  pointer-events: auto;
 }
 .navbar{
     margin-top: 20px;
     border-radius: 20px;
-    transition: transform 2s ease 5s;
+    
+    transition: transform 100s ease 5s;
     animation-name: navbar_an;
-  animation-duration: 5s;
-  animation-delay: 5s;
+  /* animation-duration: 5s; */
+  /* animation-delay: 5s; */
   animation-timing-function: ease-in-out ;
   animation-fill-mode: forwards;
   animation-timeline: scroll();
-  animation-range: entry 0% cover 4%;
+  animation-range: entry 0% cover 10%;
   
 }
+
+.hero{
+  height: 65%;
+  display: flex;
+  
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  color: rgb(255, 255, 255);
+  font-size: 120px;
+  z-index: 1;
+  position: relative;
+   font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+}
+
 
 @keyframes navbar_an {
   0% {
@@ -129,12 +156,13 @@ padding: 10px;
   }
   100% {
     transform: scale(1.05);
-    background: rgba(255, 255, 255, 0.08);
-    border-radius: 70px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    background: rgba(183, 195, 195, 0.2);
+    border-radius: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.14);
+    position: relative;
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
   }
 }
 .hamburger {
@@ -155,8 +183,17 @@ padding: 10px;
   transition: all 0.3s ease;
 }
 @media (max-width: 768px) {
+  .hero{
+    font-size: 80px;
+    position: absolute;
+    top: 200px;
+    z-index: 0;
+    transition: transform 0s;
+    /* border: 2px solid black; */
+  }
   .navbar {
     padding: 15px 20px;
+    
   }
 
   /* ✅ Align logo and hamburger side by side */
@@ -166,30 +203,45 @@ padding: 10px;
 
   .hamburger {
     display: block;
-    z-index: 20;
+    
+    position: absolute;
+  }
+  .bar{
+    
+  }
+  .hamburger.active{
+   
   }
 .navbar{
     opacity: 0;
+    display: flex;
+    justify-content: center;
+   
+    animation: none;
 }
 .navbar.active{
     opacity: 1;
     width: 100%;
     
+    
 }
   .nav-link {
-    position: absolute;
+    /* position: relative; */
     top: 80px;
+    z-index: 3;
     border-radius: 20px;
     left: 20px;
-    width:80%;
+    width:100%;
     background: rgba(255, 255, 255, 0.95);
+    margin-top: 30px;
     flex-direction: column;
+    
     align-items: center;
     gap: 30px;
     padding: 20px 0;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.4s ease-in-out;
+    transition: opacity 0 ease-in-out;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
   }
 
